# Scalable-AI-Document-Intelligence

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_local.py
.github/workflows/: deploy.yml
app/: db.py  main.py
app/api/: dependencies.py
app/api/endpoints/: admin.py  analytics.py  documents.py  history.py  ingest.py  query.py
app/core/: config.py  events.py
app/models/: schemas.py
app/rag/: engine.py
app/scripts/: cleanup_sessions.py  ingest_static.py
app/static_ui/: analytics.html  history.html  index.html  knowledge_base.html
app/workers/: celery_app.py  tasks.py
data/static/: policy.txt
frontend/: app.py
rag_knowledge_base.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: check_collections.py  check_models.py  verify_full_system.py  verify_static_retrieval.py
tests/: test_api.py
